act/taidl/antlr4/IDLV2Parser.py
# Generated from IDLV2.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class IDLV2Parser ( Parser ):

    grammarFileName = "IDLV2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'ENTRY'", "'ROOT'", "<INVALID>", "<INVALID>", 
                     "'='", "'('", "')'", "'{'", "'}'", "'['", "']'", "':'", 
                     "';'", "','" ]

    symbolicNames = [ "<INVALID>", "ENTRY", "ROOT", "TYPE", "OPERATION", 
                      "EQUAL", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", 
                      "RBRACKET", "COLON", "SEMICOLON", "COMMA", "INT", 
                      "EXPRESSION", "IDENTIFIER", "WS" ]

    RULE_module = 0
    RULE_instruction = 1
    RULE_result_type = 2
    RULE_operands = 3
    RULE_operand = 4
    RULE_attributes = 5
    RULE_attribute = 6
    RULE_attributeValue = 7
    RULE_braceList = 8
    RULE_sliceList = 9
    RULE_shape = 10
    RULE_value = 11

    ruleNames =  [ "module", "instruction", "result_type", "operands", "operand", 
                   "attributes", "attribute", "attributeValue", "braceList", 
                   "sliceList", "shape", "value" ]

    EOF = Token.EOF
    ENTRY=1
    ROOT=2
    TYPE=3
    OPERATION=4
    EQUAL=5
    LPAREN=6
    RPAREN=7
    LBRACE=8
    RBRACE=9
    LBRACKET=10
    RBRACKET=11
    COLON=12
    SEMICOLON=13
    COMMA=14
    INT=15
    EXPRESSION=16
    IDENTIFIER=17
    WS=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTRY(self):
            return self.getToken(IDLV2Parser.ENTRY, 0)

        def IDENTIFIER(self):
            return self.getToken(IDLV2Parser.IDENTIFIER, 0)

        def LBRACE(self):
            return self.getToken(IDLV2Parser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(IDLV2Parser.RBRACE, 0)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IDLV2Parser.InstructionContext)
            else:
                return self.getTypedRuleContext(IDLV2Parser.InstructionContext,i)


        def getRuleIndex(self):
            return IDLV2Parser.RULE_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule" ):
                listener.enterModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule" ):
                listener.exitModule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule" ):
                return visitor.visitModule(self)
            else:
                return visitor.visitChildren(self)




    def module(self):

        localctx = IDLV2Parser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_module)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(IDLV2Parser.ENTRY)
            self.state = 25
            self.match(IDLV2Parser.IDENTIFIER)
            self.state = 26
            self.match(IDLV2Parser.LBRACE)
            self.state = 28 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 27
                self.instruction()
                self.state = 30 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==IDLV2Parser.ROOT or _la==IDLV2Parser.IDENTIFIER):
                    break

            self.state = 32
            self.match(IDLV2Parser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(IDLV2Parser.IDENTIFIER, 0)

        def EQUAL(self):
            return self.getToken(IDLV2Parser.EQUAL, 0)

        def result_type(self):
            return self.getTypedRuleContext(IDLV2Parser.Result_typeContext,0)


        def OPERATION(self):
            return self.getToken(IDLV2Parser.OPERATION, 0)

        def LPAREN(self):
            return self.getToken(IDLV2Parser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(IDLV2Parser.RPAREN, 0)

        def ROOT(self):
            return self.getToken(IDLV2Parser.ROOT, 0)

        def operands(self):
            return self.getTypedRuleContext(IDLV2Parser.OperandsContext,0)


        def attributes(self):
            return self.getTypedRuleContext(IDLV2Parser.AttributesContext,0)


        def SEMICOLON(self):
            return self.getToken(IDLV2Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return IDLV2Parser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = IDLV2Parser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instruction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==IDLV2Parser.ROOT:
                self.state = 34
                self.match(IDLV2Parser.ROOT)


            self.state = 37
            self.match(IDLV2Parser.IDENTIFIER)
            self.state = 38
            self.match(IDLV2Parser.EQUAL)
            self.state = 39
            self.result_type()
            self.state = 40
            self.match(IDLV2Parser.OPERATION)
            self.state = 41
            self.match(IDLV2Parser.LPAREN)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << IDLV2Parser.INT) | (1 << IDLV2Parser.EXPRESSION) | (1 << IDLV2Parser.IDENTIFIER))) != 0):
                self.state = 42
                self.operands()


            self.state = 45
            self.match(IDLV2Parser.RPAREN)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==IDLV2Parser.COMMA:
                self.state = 46
                self.attributes()


            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==IDLV2Parser.SEMICOLON:
                self.state = 49
                self.match(IDLV2Parser.SEMICOLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Result_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(IDLV2Parser.TYPE, 0)

        def LBRACKET(self):
            return self.getToken(IDLV2Parser.LBRACKET, 0)

        def shape(self):
            return self.getTypedRuleContext(IDLV2Parser.ShapeContext,0)


        def RBRACKET(self):
            return self.getToken(IDLV2Parser.RBRACKET, 0)

        def getRuleIndex(self):
            return IDLV2Parser.RULE_result_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResult_type" ):
                listener.enterResult_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResult_type" ):
                listener.exitResult_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitResult_type" ):
                return visitor.visitResult_type(self)
            else:
                return visitor.visitChildren(self)




    def result_type(self):

        localctx = IDLV2Parser.Result_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_result_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(IDLV2Parser.TYPE)
            self.state = 53
            self.match(IDLV2Parser.LBRACKET)
            self.state = 54
            self.shape()
            self.state = 55
            self.match(IDLV2Parser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperandsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operand(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IDLV2Parser.OperandContext)
            else:
                return self.getTypedRuleContext(IDLV2Parser.OperandContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(IDLV2Parser.COMMA)
            else:
                return self.getToken(IDLV2Parser.COMMA, i)

        def getRuleIndex(self):
            return IDLV2Parser.RULE_operands

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperands" ):
                listener.enterOperands(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperands" ):
                listener.exitOperands(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperands" ):
                return visitor.visitOperands(self)
            else:
                return visitor.visitChildren(self)




    def operands(self):

        localctx = IDLV2Parser.OperandsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_operands)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.operand()
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IDLV2Parser.COMMA:
                self.state = 58
                self.match(IDLV2Parser.COMMA)
                self.state = 59
                self.operand()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(IDLV2Parser.ValueContext,0)


        def getRuleIndex(self):
            return IDLV2Parser.RULE_operand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperand" ):
                listener.enterOperand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperand" ):
                listener.exitOperand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperand" ):
                return visitor.visitOperand(self)
            else:
                return visitor.visitChildren(self)




    def operand(self):

        localctx = IDLV2Parser.OperandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_operand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(IDLV2Parser.COMMA)
            else:
                return self.getToken(IDLV2Parser.COMMA, i)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IDLV2Parser.AttributeContext)
            else:
                return self.getTypedRuleContext(IDLV2Parser.AttributeContext,i)


        def getRuleIndex(self):
            return IDLV2Parser.RULE_attributes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributes" ):
                listener.enterAttributes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributes" ):
                listener.exitAttributes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributes" ):
                return visitor.visitAttributes(self)
            else:
                return visitor.visitChildren(self)




    def attributes(self):

        localctx = IDLV2Parser.AttributesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attributes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(IDLV2Parser.COMMA)
            self.state = 68
            self.attribute()
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IDLV2Parser.COMMA:
                self.state = 69
                self.match(IDLV2Parser.COMMA)
                self.state = 70
                self.attribute()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(IDLV2Parser.IDENTIFIER, 0)

        def EQUAL(self):
            return self.getToken(IDLV2Parser.EQUAL, 0)

        def attributeValue(self):
            return self.getTypedRuleContext(IDLV2Parser.AttributeValueContext,0)


        def getRuleIndex(self):
            return IDLV2Parser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = IDLV2Parser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(IDLV2Parser.IDENTIFIER)
            self.state = 77
            self.match(IDLV2Parser.EQUAL)
            self.state = 78
            self.attributeValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def braceList(self):
            return self.getTypedRuleContext(IDLV2Parser.BraceListContext,0)


        def sliceList(self):
            return self.getTypedRuleContext(IDLV2Parser.SliceListContext,0)


        def value(self):
            return self.getTypedRuleContext(IDLV2Parser.ValueContext,0)


        def getRuleIndex(self):
            return IDLV2Parser.RULE_attributeValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeValue" ):
                listener.enterAttributeValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeValue" ):
                listener.exitAttributeValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributeValue" ):
                return visitor.visitAttributeValue(self)
            else:
                return visitor.visitChildren(self)




    def attributeValue(self):

        localctx = IDLV2Parser.AttributeValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attributeValue)
        try:
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.braceList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.sliceList()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.value()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BraceListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(IDLV2Parser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(IDLV2Parser.RBRACE, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IDLV2Parser.ValueContext)
            else:
                return self.getTypedRuleContext(IDLV2Parser.ValueContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(IDLV2Parser.COMMA)
            else:
                return self.getToken(IDLV2Parser.COMMA, i)

        def getRuleIndex(self):
            return IDLV2Parser.RULE_braceList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBraceList" ):
                listener.enterBraceList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBraceList" ):
                listener.exitBraceList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBraceList" ):
                return visitor.visitBraceList(self)
            else:
                return visitor.visitChildren(self)




    def braceList(self):

        localctx = IDLV2Parser.BraceListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_braceList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(IDLV2Parser.LBRACE)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << IDLV2Parser.INT) | (1 << IDLV2Parser.EXPRESSION) | (1 << IDLV2Parser.IDENTIFIER))) != 0):
                self.state = 86
                self.value()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==IDLV2Parser.COMMA:
                    self.state = 87
                    self.match(IDLV2Parser.COMMA)
                    self.state = 88
                    self.value()
                    self.state = 93
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 96
            self.match(IDLV2Parser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SliceListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(IDLV2Parser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(IDLV2Parser.RBRACE, 0)

        def LBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(IDLV2Parser.LBRACKET)
            else:
                return self.getToken(IDLV2Parser.LBRACKET, i)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IDLV2Parser.ValueContext)
            else:
                return self.getTypedRuleContext(IDLV2Parser.ValueContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(IDLV2Parser.COLON)
            else:
                return self.getToken(IDLV2Parser.COLON, i)

        def RBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(IDLV2Parser.RBRACKET)
            else:
                return self.getToken(IDLV2Parser.RBRACKET, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(IDLV2Parser.COMMA)
            else:
                return self.getToken(IDLV2Parser.COMMA, i)

        def getRuleIndex(self):
            return IDLV2Parser.RULE_sliceList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSliceList" ):
                listener.enterSliceList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSliceList" ):
                listener.exitSliceList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSliceList" ):
                return visitor.visitSliceList(self)
            else:
                return visitor.visitChildren(self)




    def sliceList(self):

        localctx = IDLV2Parser.SliceListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_sliceList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(IDLV2Parser.LBRACE)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==IDLV2Parser.LBRACKET:
                self.state = 99
                self.match(IDLV2Parser.LBRACKET)
                self.state = 100
                self.value()
                self.state = 101
                self.match(IDLV2Parser.COLON)
                self.state = 102
                self.value()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==IDLV2Parser.COLON:
                    self.state = 103
                    self.match(IDLV2Parser.COLON)
                    self.state = 104
                    self.value()


                self.state = 107
                self.match(IDLV2Parser.RBRACKET)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==IDLV2Parser.COMMA:
                    self.state = 108
                    self.match(IDLV2Parser.COMMA)
                    self.state = 109
                    self.match(IDLV2Parser.LBRACKET)
                    self.state = 110
                    self.value()
                    self.state = 111
                    self.match(IDLV2Parser.COLON)
                    self.state = 112
                    self.value()
                    self.state = 115
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==IDLV2Parser.COLON:
                        self.state = 113
                        self.match(IDLV2Parser.COLON)
                        self.state = 114
                        self.value()


                    self.state = 117
                    self.match(IDLV2Parser.RBRACKET)
                    self.state = 123
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 126
            self.match(IDLV2Parser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShapeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IDLV2Parser.ValueContext)
            else:
                return self.getTypedRuleContext(IDLV2Parser.ValueContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(IDLV2Parser.COMMA)
            else:
                return self.getToken(IDLV2Parser.COMMA, i)

        def getRuleIndex(self):
            return IDLV2Parser.RULE_shape

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShape" ):
                listener.enterShape(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShape" ):
                listener.exitShape(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShape" ):
                return visitor.visitShape(self)
            else:
                return visitor.visitChildren(self)




    def shape(self):

        localctx = IDLV2Parser.ShapeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_shape)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.value()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==IDLV2Parser.COMMA:
                self.state = 129
                self.match(IDLV2Parser.COMMA)

                self.state = 130
                self.value()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(IDLV2Parser.INT, 0)

        def IDENTIFIER(self):
            return self.getToken(IDLV2Parser.IDENTIFIER, 0)

        def EXPRESSION(self):
            return self.getToken(IDLV2Parser.EXPRESSION, 0)

        def getRuleIndex(self):
            return IDLV2Parser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = IDLV2Parser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << IDLV2Parser.INT) | (1 << IDLV2Parser.EXPRESSION) | (1 << IDLV2Parser.IDENTIFIER))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





